tests/Tokens/unknown-tokens.bel
§

# RUN: %not %belalang build %s 2>&1 | %FileCheck %s
# CHECK: error: Unknown token
# CHECK:  --> /home/guest/belalang/tests/Tokens/unknown-tokens.bel:1:1
# CHECK:   |
# CHECK: 1 | §
# CHECK:   | ^ Unknown token
# CHECK: Error: unknown token: §
